# omads

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_RULES.md  PROJEKTPROTOKOLL.md  README.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml  start-omads.ps1  start-omads.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: architecture.md  getting-started.md  live-regression-tests.md  live-smoke-tests.md  public-release-checklist.md
src/omads/: __init__.py  __main__.py
src/omads/cli/: main.py
src/omads/dna/: cold_start.py
src/omads/gui/: app.py  builder_flow.py  frontend.html  github.py  launcher.py  review_flow.py  routes.py  runtime.py  server.py  state.py  streaming.py  websocket.py
src/omads/gui/static/js/: app.js  chat_ui.js  github_ui.js  projects_ui.js  qrcode.js  settings_ui.js  shared.js
src/omads/utils/: paths.py
tests/: live_regression.py  test_cli.py  test_gui_e2e.py  test_gui_server.py
