[project]
name = "omads"
version = "0.2.0"
description = "OMADS Web-GUI — Claude Code Builder + Codex Auto-Review"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
]

[project.scripts]
omads = "omads.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
