[project]
name = "omads"
version = "0.2.0"
description = "OMADS Web-GUI — Claude Code Builder + Codex Auto-Review"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
omads = "omads.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
