[project]
name = "omads"
version = "0.2.0"
description = "OMADS Web GUI — selectable Claude Code/Codex builder plus breaker workflow"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.100",
    "segno>=1.6",
    "uvicorn>=0.20",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "playwright>=1.54",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: browser-based end-to-end tests",
]

[project.scripts]
omads = "omads.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
